// Vitest Snapshot v1

exports[`plugins/tsLoader > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/webpack-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/.pnpm/babel-loader@8.2.5_2cad51bbe9c2876396f118aa6395be78/node_modules/babel-loader/lib/index.js",
            "options": {
              "presets": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/dist/js/node/index.js",
                  {
                    "appDirectory": "<ROOT>/packages/builder/webpack-builder",
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": undefined,
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<ROOT>/node_modules/.pnpm/ts-loader@9.3.1_typescript@4.7.4+webpack@5.73.0/node_modules/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/tsLoader > should set ts-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/webpack-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/.pnpm/babel-loader@8.2.5_2cad51bbe9c2876396f118aa6395be78/node_modules/babel-loader/lib/index.js",
            "options": {
              "presets": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/dist/js/node/index.js",
                  {
                    "appDirectory": "<ROOT>/packages/builder/webpack-builder",
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": undefined,
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<ROOT>/node_modules/.pnpm/ts-loader@9.3.1_typescript@4.7.4+webpack@5.73.0/node_modules/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;
